spring security setting

--- a/gasipan/src/main/resources/application.properties
+++ b/gasipan/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8088
  
 # DB설정
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/gasipan?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/sample_db?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=gasipan
 spring.datasource.password=gasipan
 
