--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-# port 변경
+# port 설정
 server.port = 8088
  
-# DB설정
+# DB 설정
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/sample_db?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=gasipan
 spring.datasource.password=gasipan
 
-# mapper 스캔 위치
+# mapper 스캔 위치
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
