--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,14 @@ spring:
     use-legacy-processing: true
   profiles:
     active: localhost
-  datasource: # db 설정  
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/sample_db?characterEncoding=UTF-8&serverTimezone=UTC
+  datasource: # db 설정
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    url: jdbc:log4jdbc:mariadb://localhost:3306/sample_db
+    #driver-class-name: org.mariadb.jdbc.Driver
+    #url: jdbc:mariadb://localhost:3306/sample_db?characterEncoding=UTF-8&serverTimezone=UTC
     username: gasipan
     password: gasipan
+
 #logging
 logging:
  config: classpath:logback-spring.xml
