프로젝트 외부경로 매핑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,9 @@ log:
 attached:
   upload:
     root: D:\@\gasipan\attached_file
+  load:
+    root: /attached_file/**
+    uri: file:///D:/@/gasipan/attached_file/
 ...
 
 --- # dev
